Fixed private theme page alignment

--- a/php/preview.css
+++ b/php/preview.css
@@ -12,7 +12,7 @@ html{
 .theme{
   position: relative;
  width: 100px;
- float: left;
+ display: inline-block;
  margin-top: 40px;
  margin-left: 15px;
 }
